2024-12-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (isios): New instruction to check validity of IOS
	ID.
	(popios): Assume that the given IOS ID is valid, and do not raise any
	exception.
	(ioflags): Likewise.
	(iosize): Likewise.
	(ionum): Likewise.
	(ioref): Likewise.
	(iohandler): Likewise.
	(iogetv): Likewise.
	(iogetb): Likewise.
	(iosetb): Likewise.
	(iotype): Assume that the given IOS ID is valid, and do not push any
	exception.
	(late-c): Tweak `ioref_callback'.
	* libpoke/pkl-rt.pk (set_ios): Add check for validity of given IOS.
	(iosize): Likewise.
	(iohandler): Likewise.
	(ioflags): Likewise.
	(iobias): Likewise.
	(iovolatile): Likewise.
	(iosetbias): Likewise.
	(iotype): Adapt.
	* libpoke/pkl-insn.def (isios): New instruction.
	* testsuite/poke.pvm/pvm-insns-test.pk (tests): Add new tests for
	`isios' instruction.

2024-12-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-alloc.c (pvm_alloc_register_thread): Move side-effects out of
	`assert'.
	(pvm_alloc_unregister_thread): Likewise.

2024-12-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (bzl): Normalize branch condition to prevent
	loss of information due to casting to `jitter_uint' on 32-bit systems.
	(bzlu): Likewise.
	(bnzl): Likewise.
	(bnzlu): Likewise.

2024-12-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-asm.h (pkl_asm_while_loop): Accept new parameter: AST
	type node for the loop condition.
	* libpoke/pkl-asm.c (pkl_asm_while_loop): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_loop_stmt): Pass type of condition to
	`pkl_asm_while_loop' invocation.
	* libpoke/pkl-promo.c (pkl_promo_ps_if_stmt): Removed. That cast is
	wrong due to possible truncation of wider integers.
	* libpoke/ras (.loop): Update `pkl_asm_while_loop' invocation.
	* testsuite/poke.pkl/while-4.pk: New test.
	* testsuite/poke.pkl/while-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
